<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <TextView 
        style="@style/text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_setting_header"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        
        <TextView 
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fb_state_opt"
            android:layout_weight="4" />
        
        <ToggleButton
            android:id="@+id/fb_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/toggle_btn_enable"
            android:textOn="@string/toggle_btn_enable"
            android:layout_weight="1.5" />
        
    </LinearLayout>
    
    <include layout="@layout/seperator"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        
        <TextView 
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fb_log_status"
            android:layout_weight="4" />
        
        <ToggleButton
            android:id="@+id/fb_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="@string/fb_log_out"
            android:textOn="@string/fb_log_in"
            android:layout_weight="1.5" />

    </LinearLayout>
    
</LinearLayout>
