<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <TextView 
        style="@style/text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_setting_header"/>
    
    <TextView 
        style="@style/text_content"
        android:text="@string/silent_opt" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        
        <EditText 
	        android:id="@+id/snooze_time"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:text="10" />
        <TextView 
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="minutes"/>
	        
    </LinearLayout>
    
    <include layout="@layout/seperator"/>
    
    <TextView 
        style="@style/text_content"
        android:text="@string/snooze_opt" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        
        <EditText 
	        android:id="@+id/silent_time"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:text="10" />
        <TextView 
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="minutes"/>
	        
    </LinearLayout>
    
    <include layout="@layout/seperator"/>
    
    <TextView 
        style="@style/text_content"
        android:text="@string/ringtones_opt" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal">
        
        <EditText 
	        android:id="@+id/ringtones_time"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:text="1" />
        <TextView 
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="minutes"/>
	        
    </LinearLayout>
    
</LinearLayout>
